# CFlexer

./: .gitmodules  CMakeLists.txt  Gitkey  Gitkey.pub  Makefile  Makefile.win  README.md  TODO.txt  heh.txt  project.4coder  run.sh
include/: readME.md
minBuild/: Makefile
res/: shader.vs
res/shaders/: background.fs  background.vs  sprite.fs  sprite.vs
src/: main.c  main.cpp
src/common/: util.c  util.h  util.hpp
src/core/: input.cpp  input.hpp  keyboard.c  keyboard.h  keyboard.hpp  m2.h  m3.c  m3.h  m4.c  m4.h  math.h  time.c  time.h  transform.c  transform.h  vec2.c  vec2.h  vec3.c  vec3.h  vec4.c
src/ecs/: camera.c  components.h  transform.h
src/engine/: game.c  game.h
src/engine/common/: util.c  util.h
src/engine/core/: keyboard.c  keyboard.h  m2.c  m3.c  m3.h  m4.c  m4.h  math.h  time.h  types.h  vec2.c  vec2.h  vec3.c  vec4.c  vec4.h
src/engine/ecs/: camera.h  components.h  ecs.c  ecs.h  entity.h  transform.c
src/engine/ecs/components/: camera.c  camera.h  camera_component.c  camera_component.h  comp_data.h  components.c  components.h  sprite.c  sprite.h  sprite_component.c  sprite_component.h  transform.c  transform.h  transform_component.c  transform_component.h
src/engine/ecs/types/: sprite.c  sprite.h
src/engine/rendering/: mesh.c  mesh.h  renderer.c  renderer.h  shader.c  texture.c  texture.h  window.c  window.h
src/game/: game.c  game.cpp  game.h  game.hpp
src/rendering/: mesh.c  mesh.h  renderer.c  renderer.h  shader.c  shader.h  texture.c  texture.h  window.c  window.cpp  window.h  window.hpp
